# sqlitewrap

./: README.md  pyproject.toml
src/SQLITEWRAP/: sqlitewrap.py
src/SQLITEWRAP.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
