[project]
name = "SQLITEWRAP"
version = "0.0.3"
authors = [
  { name="Roy Noan", email="roynoan@gmail.com" },
]
description = "This is a simple wrapper class for sqlite"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Roysoldier/sqlitewrap"
